# syllibot

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: build-push-docker-image.yml  prod-docker-image.yml
containers/: Discord.Dockerfile
scripts/: seed_db.py
src/: config.rs  files.rs  language_detection.rs  main.rs  translation.rs  types.rs
src/api/: main.py
src/dashboard/: dashboard.py
src/shappie/: bot.py  slash_commands.py
