[package]
name = "syllibot"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
lingua = "1.6.2"
log = "0.4.22"
poise = "0.6.1"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
serde = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
